@@ -29,6 +29,8 @@ Until beta2:
 - fixed some functions to be Excel-compatibel (FIND, REPLACE,LEFT,
   RIGHT,MID)
 - now it's "Sheet" everywhere, not more "Table" :-)
+- added formula indicator (small blue rectangle on the corner,
+  when the cell holds a formula). idea from Quattro Pro
 
 new functions added:
  ISBLANK, CHAR, CODE, VALUE, DOLLAR, CONCATENATE, FIXED, T, TEXT, SUBSTITUTE,
